Add requirements + styling for documents + HTML

--- a/references/shiroma2022.bib
+++ b/references/shiroma2022.bib
@@ -1,4 +1,4 @@
-@ARTICLE{shiroma2022,
+@article{shiroma2022,
   author={Shiroma, Gustavo H. X. and Lavalle, Marco and Buckley, Sean M.},
   journal={IEEE Transactions on Geoscience and Remote Sensing}, 
   title={An Area-Based Projection Algorithm for SAR Radiometric Terrain Correction and Geocoding}, 
@@ -7,4 +7,5 @@
   number={},
   pages={1-23},
   keywords={Radar;Spaceborne radar;Synthetic aperture radar;Projection algorithms;Radar polarimetry;Interpolation;Radiometry;C-band;covariance matrix;geocoded polarimetric covariance matrix (GCOV);interferometric synthetic aperture radar (SAR) (InSAR);L-band;NASA-ISRO SAR (NISAR);polarimetric SAR (PolSAR);radiometric terrain correction (RTC);SAR;SAR interferometry},
-  doi={10.1109/TGRS.2022.3147472}}
+  doi={10.1109/TGRS.2022.3147472}
+}
