--- a/references/small2011.bib
+++ b/references/small2011.bib
@@ -1,4 +1,4 @@
-@ARTICLE{small2011,
+@article{small2011,
   author={Small, David},
   journal={IEEE Transactions on Geoscience and Remote Sensing}, 
   title={Flattening Gamma: Radiometric Terrain Correction for SAR Imagery}, 
@@ -7,4 +7,5 @@
   number={8},
   pages={3081-3093},
   keywords={Geometry;Backscatter;Radar imaging;Sensors;Spaceborne radar;Radiometry;Radar cross sections;radar scattering;radar terrain factors},
-  doi={10.1109/TGRS.2011.2120616}}
+  doi={10.1109/TGRS.2011.2120616}
+}
