--- a/references/cameron1996.bib
+++ b/references/cameron1996.bib
@@ -1,4 +1,4 @@
-@ARTICLE{cameron1996,
+@article{cameron1996,
   author={Cameron, W.L. and Youssef, N.N. and Leung, L.K.},
   journal={IEEE Transactions on Geoscience and Remote Sensing}, 
   title={Simulated polarimetric signatures of primitive geometrical shapes}, 
@@ -7,4 +7,5 @@
   number={3},
   pages={793-803},
   keywords={Solid modeling;Shape;Radar scattering;Light scattering;Matrix decomposition;Electromagnetic scattering;Symmetric matrices;Polarization;Scattering parameters;Statistics},
-  doi={10.1109/36.499784}}
+  doi={10.1109/36.499784}
+}
