--- a/references/cloude1996.bib
+++ b/references/cloude1996.bib
@@ -1,4 +1,4 @@
-@ARTICLE{cloude1996,
+@article{cloude1996,
   author={Cloude, S.R. and Pottier, E.},
   journal={IEEE Transactions on Geoscience and Remote Sensing}, 
   title={A review of target decomposition theorems in radar polarimetry}, 
@@ -7,4 +7,5 @@
   number={2},
   pages={498-518},
   keywords={Radar polarimetry;Radar scattering;Particle scattering;Rayleigh scattering;Light scattering;Matrix decomposition;Radar remote sensing;Covariance matrix;Speckle;Clouds},
-  doi={10.1109/36.485127}}
+  doi={10.1109/36.485127}
+}
