--- a/references/cook2014.bib
+++ b/references/cook2014.bib
@@ -1,15 +1,14 @@
-
-@Article{cook2014,
-AUTHOR = {Cook, Monica and Schott, John R. and Mandel, John and Raqueno, Nina},
-TITLE = {Development of an Operational Calibration Methodology for the Landsat Thermal Data Archive and Initial Testing of the Atmospheric Compensation Component of a Land Surface Temperature (LST) Product from the Archive},
-JOURNAL = {Remote Sensing},
-VOLUME = {6},
-YEAR = {2014},
-NUMBER = {11},
-PAGES = {11244--11266},
-URL = {https://www.mdpi.com/2072-4292/6/11/11244},
-ISSN = {2072-4292},
-DOI = {10.3390/rs61111244}
+@article{cook2014,
+  author = {Cook, Monica and Schott, John R. and Mandel, John and Raqueno, Nina},
+  title = {Development of an Operational Calibration Methodology for the Landsat Thermal Data Archive and Initial Testing of the Atmospheric Compensation Component of a Land Surface Temperature (LST) Product from the Archive},
+  journal = {Remote Sensing},
+  volume = {6},
+  year = {2014},
+  number = {11},
+  pages = {11244--11266},
+  url = {https://www.mdpi.com/2072-4292/6/11/11244},
+  issn = {2072-4292},
+  doi = {10.3390/rs61111244}
 }
 
 
