--- a/references/lee2009.bib
+++ b/references/lee2009.bib
@@ -1,4 +1,4 @@
-@ARTICLE{lee2009,
+@article{lee2009,
   author={Jong-Sen Lee and Jen-Hung Wen and Ainsworth, T.L. and Kun-Shan Chen and Chen, A.J.},
   journal={IEEE Transactions on Geoscience and Remote Sensing}, 
   title={Improved Sigma Filter for Speckle Filtering of SAR Imagery}, 
@@ -7,4 +7,5 @@
   number={1},
   pages={202-213},
   keywords={Filters;Speckle;Synthetic aperture radar;Filtering algorithms;Remote sensing;Radar scattering;Laboratories;Computational efficiency;Probability density function;Spaceborne radar;Sigma filter;speckle;speckle filtering;synthetic aperture radar (SAR);Sigma filter;speckle;speckle filtering;synthetic aperture radar (SAR)},
-  doi={10.1109/TGRS.2008.2002881}}
+  doi={10.1109/TGRS.2008.2002881}
+}
