--- a/references/ryan2019.bib
+++ b/references/ryan2019.bib
@@ -1,15 +1,14 @@
-
-@Article{ryan2019,
-AUTHOR = {Ryan, Robert E. and Pagnutti, Mary and Burch, Kara and Leigh, Larry and Ruggles, Timothy and Cao, Changyong and Aaron, David and Blonski, Slawomir and Helder, Dennis},
-TITLE = {The Terra Vega Active Light Source: A First Step in a New Approach to Perform Nighttime Absolute Radiometric Calibrations and Early Results Calibrating the VIIRS DNB},
-JOURNAL = {Remote Sensing},
-VOLUME = {11},
-YEAR = {2019},
-NUMBER = {6},
-ARTICLE-NUMBER = {710},
-URL = {https://www.mdpi.com/2072-4292/11/6/710},
-ISSN = {2072-4292},
-DOI = {10.3390/rs11060710}
+@article{ryan2019,
+  author = {Ryan, Robert E. and Pagnutti, Mary and Burch, Kara and Leigh, Larry and Ruggles, Timothy and Cao, Changyong and Aaron, David and Blonski, Slawomir and Helder, Dennis},
+  title = {The Terra Vega Active Light Source: A First Step in a New Approach to Perform Nighttime Absolute Radiometric Calibrations and Early Results Calibrating the VIIRS DNB},
+  journal = {Remote Sensing},
+  volume = {11},
+  year = {2019},
+  number = {6},
+  article-number = {710},
+  url = {https://www.mdpi.com/2072-4292/11/6/710},
+  issn = {2072-4292},
+  doi = {10.3390/rs11060710}
 }
 
 
