--- a/references/zebker2010.bib
+++ b/references/zebker2010.bib
@@ -1,4 +1,4 @@
-@ARTICLE{zebker2010,
+@article{zebker2010,
   author={Zebker, Howard A. and Hensley, Scott and Shanker, Piyush and Wortham, Cody},
   journal={IEEE Transactions on Geoscience and Remote Sensing}, 
   title={Geodetically Accurate InSAR Data Processor}, 
@@ -7,4 +7,5 @@
   number={12},
   pages={4309-4321},
   keywords={Synthetic aperture radar interferometry;Radar imaging;Focusing;Radar tracking;Synthetic aperture radar;Satellites;Equations;Motion compensation;Frequency domain analysis;Instruments;Interferometric synthetic aperture radar (InSAR);motion compensation;radar interferometry;SAR processing;synthetic aperture radar (SAR)},
-  doi={10.1109/TGRS.2010.2051333}}
+  doi={10.1109/TGRS.2010.2051333}
+}
