Refactoring, enable citations and other references

--- a/references/iso19115_2_2009.bib
+++ b/references/iso19115_2_2009.bib
@@ -6,5 +6,5 @@
   title = {{Geographic information — Metadata — Part 2: Extensions for imagery and gridded data}},
   address = {Geneva, CH},
   institution = {International Organization for Standardization},
-  author = {International Organization for Standardization}
+  author = {{International Organization for Standardization}}
 }
