Deploy latest version of PFS documents cbdb6354e6da2ed2d133d743c9bb428acfadc4f2

--- a/latest/SAR-ORB.bib
+++ b/latest/SAR-ORB.bib
@@ -1,59 +1,3 @@
-@article{lee2009,
-  author={Jong-Sen Lee and Jen-Hung Wen and Ainsworth, T.L. and Kun-Shan Chen and Chen, A.J.},
-  journal={IEEE Transactions on Geoscience and Remote Sensing},
-  title={Improved Sigma Filter for Speckle Filtering of SAR Imagery},
-  year={2009},
-  volume={47},
-  number={1},
-  pages={202-213},
-  keywords={Filters;Speckle;Synthetic aperture radar;Filtering algorithms;Remote sensing;Radar scattering;Laboratories;Computational efficiency;Probability density function;Spaceborne radar;Sigma filter;speckle;speckle filtering;synthetic aperture radar (SAR);Sigma filter;speckle;speckle filtering;synthetic aperture radar (SAR)},
-  doi={10.1109/TGRS.2008.2002881}
-}
-
-@article{vachon2000,
-  author = {Vachon, P. and Dobson, F.},
-  year = {2000},
-  month = {08},
-  pages = {306-313},
-  title = {Wind retrieval from RADARSAT SAR images: Selection of a suitable C-band HH polarization wind retrieval model},
-  volume = {26},
-  journal = {Can. J. Remote Sens.},
-  doi = {10.1080/07038992.2000.10874781}
-}
-@techreport{iso19115_2_2009,
-  type = {Standard},
-  key = {ISO 19115-2:2009},
-  month = feb,
-  year = {2009},
-  title = {{Geographic information — Metadata — Part 2: Extensions for imagery and gridded data}},
-  address = {Geneva, CH},
-  institution = {International Organization for Standardization},
-  author = {{International Organization for Standardization}}
-}
-@article{shiroma2022,
-  author={Shiroma, Gustavo H. X. and Lavalle, Marco and Buckley, Sean M.},
-  journal={IEEE Transactions on Geoscience and Remote Sensing},
-  title={An Area-Based Projection Algorithm for SAR Radiometric Terrain Correction and Geocoding},
-  year={2022},
-  volume={60},
-  number={},
-  pages={1-23},
-  keywords={Radar;Spaceborne radar;Synthetic aperture radar;Projection algorithms;Radar polarimetry;Interpolation;Radiometry;C-band;covariance matrix;geocoded polarimetric covariance matrix (GCOV);interferometric synthetic aperture radar (SAR) (InSAR);L-band;NASA-ISRO SAR (NISAR);polarimetric SAR (PolSAR);radiometric terrain correction (RTC);SAR;SAR interferometry},
-  doi={10.1109/TGRS.2022.3147472}
-}
-
-@article{zebker2010,
-  author={Zebker, Howard A. and Hensley, Scott and Shanker, Piyush and Wortham, Cody},
-  journal={IEEE Transactions on Geoscience and Remote Sensing},
-  title={Geodetically Accurate InSAR Data Processor},
-  year={2010},
-  volume={48},
-  number={12},
-  pages={4309-4321},
-  keywords={Synthetic aperture radar interferometry;Radar imaging;Focusing;Radar tracking;Synthetic aperture radar;Satellites;Equations;Motion compensation;Frequency domain analysis;Instruments;Interferometric synthetic aperture radar (InSAR);motion compensation;radar interferometry;SAR processing;synthetic aperture radar (SAR)},
-  doi={10.1109/TGRS.2010.2051333}
-}
-
 @article{small2011,
   author={Small, David},
   journal={IEEE Transactions on Geoscience and Remote Sensing},
@@ -66,6 +10,38 @@
   doi={10.1109/TGRS.2011.2120616}
 }
 
+@article{shiroma2022,
+  author={Shiroma, Gustavo H. X. and Lavalle, Marco and Buckley, Sean M.},
+  journal={IEEE Transactions on Geoscience and Remote Sensing},
+  title={An Area-Based Projection Algorithm for SAR Radiometric Terrain Correction and Geocoding},
+  year={2022},
+  volume={60},
+  number={},
+  pages={1-23},
+  keywords={Radar;Spaceborne radar;Synthetic aperture radar;Projection algorithms;Radar polarimetry;Interpolation;Radiometry;C-band;covariance matrix;geocoded polarimetric covariance matrix (GCOV);interferometric synthetic aperture radar (SAR) (InSAR);L-band;NASA-ISRO SAR (NISAR);polarimetric SAR (PolSAR);radiometric terrain correction (RTC);SAR;SAR interferometry},
+  doi={10.1109/TGRS.2022.3147472}
+}
+
+@article{quilfen1998,
+  author = {Yves, Quilfen and Chapron, B. and Elfouhaily, T. and Katsaros, Kristina and Tournadre, Jean},
+  year = {1998},
+  month = {04},
+  pages = {7,767-7,786},
+  title = {Observation of tropical cyclones by high-resolution scatterometry},
+  volume = {103},
+  journal = {J. Geophys. Res.},
+  doi = {10.1029/97JC01911}
+}
+@article{yamaguchi2011,
+  author = {Yamaguchi, Yoshio and Sato, Akinobu and Boerner, Wolfgang-Martin and Sato, Ryoichi and Yamada, Hiroyoshi},
+  year = {2011},
+  month = {07},
+  pages = {2251 - 2258},
+  title = {Four-Component Scattering Power Decomposition With Rotation of Coherency Matrix},
+  volume = {49},
+  journal = {Geoscience and Remote Sensing, IEEE Transactions on},
+  doi = {10.1109/TGRS.2010.2099124}
+}
 @article{zebker2017,
   author = {Zebker, Howard},
   year = {2017},
@@ -76,13 +52,56 @@
   journal = {IEEE Geoscience and Remote Sensing Letters},
   doi = {10.1109/LGRS.2017.2753580}
 }
-@article{quilfen1998,
-  author = {Yves, Quilfen and Chapron, B. and Elfouhaily, T. and Katsaros, Kristina and Tournadre, Jean},
-  year = {1998},
-  month = {04},
-  pages = {7,767-7,786},
-  title = {Observation of tropical cyclones by high-resolution scatterometry},
-  volume = {103},
-  journal = {J. Geophys. Res.},
-  doi = {10.1029/97JC01911}
+@article{vachon2000,
+  author = {Vachon, P. and Dobson, F.},
+  year = {2000},
+  month = {08},
+  pages = {306-313},
+  title = {Wind retrieval from RADARSAT SAR images: Selection of a suitable C-band HH polarization wind retrieval model},
+  volume = {26},
+  journal = {Can. J. Remote Sens.},
+  doi = {10.1080/07038992.2000.10874781}
+}
+@article{lee2009,
+  author={Jong-Sen Lee and Jen-Hung Wen and Ainsworth, T.L. and Kun-Shan Chen and Chen, A.J.},
+  journal={IEEE Transactions on Geoscience and Remote Sensing},
+  title={Improved Sigma Filter for Speckle Filtering of SAR Imagery},
+  year={2009},
+  volume={47},
+  number={1},
+  pages={202-213},
+  keywords={Filters;Speckle;Synthetic aperture radar;Filtering algorithms;Remote sensing;Radar scattering;Laboratories;Computational efficiency;Probability density function;Spaceborne radar;Sigma filter;speckle;speckle filtering;synthetic aperture radar (SAR);Sigma filter;speckle;speckle filtering;synthetic aperture radar (SAR)},
+  doi={10.1109/TGRS.2008.2002881}
+}
+
+@article{raney2012,
+  author = {Raney, Russell and Cahill, Joshua and Patterson, G. and Bussey, D.},
+  year = {2012},
+  month = {05},
+  pages = {},
+  title = {The m-chi decomposition of hybrid dual-polarimetric radar data with application to lunar craters},
+  volume = {117},
+  journal = {Journal of Geophysical Research (Planets)},
+  doi = {10.1029/2011JE003986}
+}
+@techreport{iso19115_2_2009,
+  type = {Standard},
+  key = {ISO 19115-2:2009},
+  month = feb,
+  year = {2009},
+  title = {{Geographic information — Metadata — Part 2: Extensions for imagery and gridded data}},
+  address = {Geneva, CH},
+  institution = {International Organization for Standardization},
+  author = {{International Organization for Standardization}}
+}
+@article{zebker2010,
+  author={Zebker, Howard A. and Hensley, Scott and Shanker, Piyush and Wortham, Cody},
+  journal={IEEE Transactions on Geoscience and Remote Sensing},
+  title={Geodetically Accurate InSAR Data Processor},
+  year={2010},
+  volume={48},
+  number={12},
+  pages={4309-4321},
+  keywords={Synthetic aperture radar interferometry;Radar imaging;Focusing;Radar tracking;Synthetic aperture radar;Satellites;Equations;Motion compensation;Frequency domain analysis;Instruments;Interferometric synthetic aperture radar (InSAR);motion compensation;radar interferometry;SAR processing;synthetic aperture radar (SAR)},
+  doi={10.1109/TGRS.2010.2051333}
 }
