--- a/latest/SAR-GSLC.bib
+++ b/latest/SAR-GSLC.bib
@@ -1,13 +1,13 @@
-@article{lee2009,
-  author={Jong-Sen Lee and Jen-Hung Wen and Ainsworth, T.L. and Kun-Shan Chen and Chen, A.J.},
+@article{small2011,
+  author={Small, David},
   journal={IEEE Transactions on Geoscience and Remote Sensing},
-  title={Improved Sigma Filter for Speckle Filtering of SAR Imagery},
-  year={2009},
-  volume={47},
-  number={1},
-  pages={202-213},
-  keywords={Filters;Speckle;Synthetic aperture radar;Filtering algorithms;Remote sensing;Radar scattering;Laboratories;Computational efficiency;Probability density function;Spaceborne radar;Sigma filter;speckle;speckle filtering;synthetic aperture radar (SAR);Sigma filter;speckle;speckle filtering;synthetic aperture radar (SAR)},
-  doi={10.1109/TGRS.2008.2002881}
+  title={Flattening Gamma: Radiometric Terrain Correction for SAR Imagery},
+  year={2011},
+  volume={49},
+  number={8},
+  pages={3081-3093},
+  keywords={Geometry;Backscatter;Radar imaging;Sensors;Spaceborne radar;Radiometry;Radar cross sections;radar scattering;radar terrain factors},
+  doi={10.1109/TGRS.2011.2120616}
 }
 
 @article{shiroma2022,
@@ -22,27 +22,15 @@
   doi={10.1109/TGRS.2022.3147472}
 }
 
-@article{zebker2010,
-  author={Zebker, Howard A. and Hensley, Scott and Shanker, Piyush and Wortham, Cody},
-  journal={IEEE Transactions on Geoscience and Remote Sensing},
-  title={Geodetically Accurate InSAR Data Processor},
-  year={2010},
-  volume={48},
-  number={12},
-  pages={4309-4321},
-  keywords={Synthetic aperture radar interferometry;Radar imaging;Focusing;Radar tracking;Synthetic aperture radar;Satellites;Equations;Motion compensation;Frequency domain analysis;Instruments;Interferometric synthetic aperture radar (InSAR);motion compensation;radar interferometry;SAR processing;synthetic aperture radar (SAR)},
-  doi={10.1109/TGRS.2010.2051333}
-}
-
-@article{zheng2017,
-  author = {Zheng, Yujie and Zebker, Howard},
-  year = {2017},
-  month = {05},
-  pages = {1-8},
-  title = {Phase Correction of Single-Look Complex Radar Images for User-Friendly Efficient Interferogram Formation},
-  volume = {PP},
-  journal = {IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing},
-  doi = {10.1109/JSTARS.2017.2697861}
+@article{yamaguchi2011,
+  author = {Yamaguchi, Yoshio and Sato, Akinobu and Boerner, Wolfgang-Martin and Sato, Ryoichi and Yamada, Hiroyoshi},
+  year = {2011},
+  month = {07},
+  pages = {2251 - 2258},
+  title = {Four-Component Scattering Power Decomposition With Rotation of Coherency Matrix},
+  volume = {49},
+  journal = {Geoscience and Remote Sensing, IEEE Transactions on},
+  doi = {10.1109/TGRS.2010.2099124}
 }
 @article{zebker2017,
   author = {Zebker, Howard},
@@ -54,18 +42,38 @@
   journal = {IEEE Geoscience and Remote Sensing Letters},
   doi = {10.1109/LGRS.2017.2753580}
 }
-@article{small2011,
-  author={Small, David},
+@article{zheng2017,
+  author = {Zheng, Yujie and Zebker, Howard},
+  year = {2017},
+  month = {05},
+  pages = {1-8},
+  title = {Phase Correction of Single-Look Complex Radar Images for User-Friendly Efficient Interferogram Formation},
+  volume = {PP},
+  journal = {IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing},
+  doi = {10.1109/JSTARS.2017.2697861}
+}
+@article{lee2009,
+  author={Jong-Sen Lee and Jen-Hung Wen and Ainsworth, T.L. and Kun-Shan Chen and Chen, A.J.},
   journal={IEEE Transactions on Geoscience and Remote Sensing},
-  title={Flattening Gamma: Radiometric Terrain Correction for SAR Imagery},
-  year={2011},
-  volume={49},
-  number={8},
-  pages={3081-3093},
-  keywords={Geometry;Backscatter;Radar imaging;Sensors;Spaceborne radar;Radiometry;Radar cross sections;radar scattering;radar terrain factors},
-  doi={10.1109/TGRS.2011.2120616}
+  title={Improved Sigma Filter for Speckle Filtering of SAR Imagery},
+  year={2009},
+  volume={47},
+  number={1},
+  pages={202-213},
+  keywords={Filters;Speckle;Synthetic aperture radar;Filtering algorithms;Remote sensing;Radar scattering;Laboratories;Computational efficiency;Probability density function;Spaceborne radar;Sigma filter;speckle;speckle filtering;synthetic aperture radar (SAR);Sigma filter;speckle;speckle filtering;synthetic aperture radar (SAR)},
+  doi={10.1109/TGRS.2008.2002881}
 }
 
+@article{raney2012,
+  author = {Raney, Russell and Cahill, Joshua and Patterson, G. and Bussey, D.},
+  year = {2012},
+  month = {05},
+  pages = {},
+  title = {The m-chi decomposition of hybrid dual-polarimetric radar data with application to lunar craters},
+  volume = {117},
+  journal = {Journal of Geophysical Research (Planets)},
+  doi = {10.1029/2011JE003986}
+}
 @techreport{iso19115_2_2009,
   type = {Standard},
   key = {ISO 19115-2:2009},
@@ -75,4 +83,15 @@
   address = {Geneva, CH},
   institution = {International Organization for Standardization},
   author = {{International Organization for Standardization}}
+}
+@article{zebker2010,
+  author={Zebker, Howard A. and Hensley, Scott and Shanker, Piyush and Wortham, Cody},
+  journal={IEEE Transactions on Geoscience and Remote Sensing},
+  title={Geodetically Accurate InSAR Data Processor},
+  year={2010},
+  volume={48},
+  number={12},
+  pages={4309-4321},
+  keywords={Synthetic aperture radar interferometry;Radar imaging;Focusing;Radar tracking;Synthetic aperture radar;Satellites;Equations;Motion compensation;Frequency domain analysis;Instruments;Interferometric synthetic aperture radar (InSAR);motion compensation;radar interferometry;SAR processing;synthetic aperture radar (SAR)},
+  doi={10.1109/TGRS.2010.2051333}
 }
